--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,12 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: alpine:3.7
+      - image: bmonkman/node-flutter
+      # - image: noland/flutter-circleci-demo:v1
     steps:
       - run:
           name: The First Step
           command: |
             echo 'Hello World!'
             echo 'This is the delivery pipeline!'
+            flutter --version
