--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,3 +19,9 @@ jobs:
       - run:
           name: Run Unit Tests
           command: flutter test
+      - run:
+          name: Start Chrome driver process
+          command: chromedriver --port=4444 &
+      - run:
+          name: Run Integration Tests
+          command: flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server
