--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   integration_test:
-    sdk: flutter
+    git:
+      url: https://github.com/nolandg/flutter
+      path: packages/integration_test
+      ref: fix-screenshots
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
