--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,9 +52,9 @@ jobs:
           command: flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server
       - store_artifacts:
           path: /tmp/screenshots
-      - run:
-          name: Kill Chromedriver Background Process
-          command: kill -SIGINT $(pgrep chromedriver) # not using SIGINT causes Circleci to see it as a failure
+      # - run:
+      #     name: Kill Chromedriver Background Process
+      #     command: kill -SIGINT $(pgrep chromedriver) # not using SIGINT causes Circleci to see it as a failure
 
       # Deploy to Production
       - run:
