--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,16 +45,17 @@ jobs:
           command: flutter test
       - run:
           name: Start Chrome driver process
-          command: chromedriver --port=4444
+          command: chromedriver --port=4444 && true
           background: true
       - run:
           name: Run Integration Tests
           command: flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server
       - store_artifacts:
           path: /tmp/screenshots
-      # - run:
-      #     name: Kill Chromedriver Background Process
-      #     command: kill -SIGINT $(pgrep chromedriver) # not using SIGINT causes Circleci to see it as a failure
+      # Can't find a way to kill background process without making red error step in Circleci
+      - run:
+          name: Kill Chromedriver Background Process
+          command: kill -SIGINT $(pgrep chromedriver)
 
       # Deploy to Production
       - run:
